third_party/move/move-compiler-v2/tests/checking/dotdot/extra_dotdot.exp

Diagnostics:
error: the constructor takes 3 arguments but 4 were provided
  ┌─ tests/checking/dotdot/extra_dotdot.move:5:13
  │
5 │         let S(x, _, _, ..) = x;
  │             ^^^^^^^^^^^^^^
