third_party/move/move-compiler-v2/tests/checking/dotdot/extra_dotdot.move
module 0x42::test {
    struct S(bool, u8, address);

    fun extra_dotdot(x: S) {
        let S(x, _, _, ..) = x;
    }
}
